[package]
name = "kvs"
version = "0.1.0"
edition = "2024"
authors=["terry"]
description = "A key-value store"
[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
