[package]
name = "kvs"
version = "0.1.0"
edition = "2024"
authors=["terry"]
description = "A key-value store"
[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
clap = { version = "4.5.53", features = ["derive"] }
crossbeam-utils = "0.8.21"
log = "0.4.28"
num_cpus = "1.17.0"
panic-control = "0.1.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sled = "0.34.7"
tempfile = "3.23.0"
thiserror = "2.0.17"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
